tests/baselines/reference/classAbstractMethodWithImplementation.errors.txt
classAbstractMethodWithImplementation.ts(2,14): error TS1245: Method 'foo' cannot have an implementation because it is marked abstract.


==== classAbstractMethodWithImplementation.ts (1 errors) ====
    abstract class A {
        abstract foo() {}
                 ~~~
!!! error TS1245: Method 'foo' cannot have an implementation because it is marked abstract.
    }